--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
 		<li class="list">用Alert問候,用Prompt與If對校長、導師及他人做出差別待遇回應,並克服大小寫問題。</li>
 		<li class="list">利用Class選擇器對文章內容進行專制式的管理。</li>
 		<li class="list">用Id選擇器與虛擬選擇器使我下面的"送出"按鍵不枯燥,並製做點擊後的回應。</li>
-		<li class="list">創造能夠收合展開的區域於畫面右方假裝那是Google Ads。</li>
+		<li class="list">創造能夠收合展開右方廣告區域的功能鍵,畫面右方假裝是Google Ads。</li>
 		<li class="list">自動排程於數秒後彈跳視窗關心使用者的健康。</li>
 		<li class="list">使用Git分享這個小實驗室。</li>
 	</ul>
