--- a/index.htm
+++ b/index.htm
@@ -55,6 +55,7 @@
 		<li class="list">用Id選擇器與虛擬選擇器使我下面的"送出"按鍵不枯燥,並製做點擊後的回應。</li>
 		<li class="list">創造能夠收合展開右方廣告區域的功能鍵,畫面右方假裝是Google Ads。</li>
 		<li class="list">自動排程於數秒後彈跳視窗關心使用者的健康。</li>
+		<li class="list">雖然沒有RWD相關設置,但此排版尚可於行動裝置上閱讀。</li>
 		<li class="list">使用Git分享這個小實驗室。</li>
 	</ul>
 	
