--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"></meta>
 	<title>My Laboratory</title>
 	<script type="text/javascript">
-		alert("Hi, there! I'm Jimmy!")
+		alert("Hi, There! I'm Jimmy!")
 		var visitor=prompt("May I have your name please ?","Jimmy Chou");
 		if(visitor.toUpperCase()==="Shirney Huang".toUpperCase()){
 		alert("Prin...Prin...Prin...Principal !? Such an honour!");
